spacing fixed

--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -43,7 +43,7 @@
     background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
     // Responsive Button hero style
     @include respond(phone) {
-      background-image: none;
+      background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
     }
   }
 
