--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -6,8 +6,6 @@
   font-weight: 400;
   color: $dark-blue-text;
   padding: 5 5.6rem!important;
-  display : flex;
-  align-items: center;
   margin-bottom: 0;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
@@ -21,6 +19,7 @@
 
   @include respond(phone) {
     padding: 0rem $default-font-size;
+    padding-bottom: 35%!important;
   }
 
   .hero-title {
